# dynamic-agent

./: .env-example  .gitignore  Cargo.toml  README.md  docker-compose-full.yml  docker-compose.yml  dockerfile
json/: index_schema.json  prompts.json
json/query/: qdrant.json  redis.json
src/: agent.rs  lib.rs  main.rs  server.rs  websocket.rs
src/cache/: mod.rs  qdrant.rs  redis.rs
src/cli/: mod.rs
src/config/: mod.rs  prompt.rs  remote_config.rs
src/history/: mod.rs  qdrant.rs  redis.rs
src/llm/: mod.rs
src/llm/chat/: anthropic.rs  deepseek.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  openai.rs  xai.rs
src/llm/embedding/: anthropic.rs  deepseek.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  openai.rs  xai.rs
src/models/: chat.rs  mod.rs  websocket.rs
src/rag/: rag.rs
src/server/: api.rs  mod.rs  websocket.rs
