[package]
name = "dynamic-agent"
version = "0.1.0"
edition = "2021"
authors = ["Thanon Aphithanawat"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1.21"
clap =  { version = "4", features = ["derive", "env"] }
base64 = "0.22" 
thiserror = "1.0"
qdrant-client = "1.14"
redis = { version = "0.25", default-features = false, features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
rllm = { version = "1.1" }
strsim = "0.11"
governor = "0.10"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.2"
lazy_static = "1.5"
vector-nexus = "0.1"

